outputs.OLD/production-metadata/HEAL-33054/unpackaged/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Main_Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Practitioner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Main Practitioner must be active and be a doctor.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Affiliate Doctor Account Record Type</value>
            </filterItems>
            <filterItems>
                <field>Account.Account_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.Practice_Group__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Doctor)</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaritalStatus__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Legally Separated</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedicalCondition__c</fullName>
        <label>Medical Condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Alzheimer’s Disease</fullName>
                </value>
                <value>
                    <fullName>Allergy</fullName>
                </value>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Arthritis</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Chronic Pain</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Erectile Dysfunction</fullName>
                </value>
                <value>
                    <fullName>Heart Disease</fullName>
                </value>
                <value>
                    <fullName>High Cholesterol</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure</fullName>
                </value>
                <value>
                    <fullName>HIV/AIDS</fullName>
                </value>
                <value>
                    <fullName>Osteoporosis</fullName>
                </value>
                <value>
                    <fullName>Prostate Issues</fullName>
                </value>
                <value>
                    <fullName>Respiratory Diseases</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Back Issues</fullName>
                </value>
                <value>
                    <fullName>Peyronies Disease</fullName>
                </value>
                <value>
                    <fullName>Digestive Problems</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>Penis Implant</fullName>
                </value>
                <value>
                    <fullName>Dementia</fullName>
                </value>
                <value>
                    <fullName>Parkinson&apos;s Disease</fullName>
                </value>
                <value>
                    <fullName>Hepatitis</fullName>
                </value>
                <value>
                    <fullName>Hernia</fullName>
                </value>
                <value>
                    <fullName>Venereal Disease</fullName>
                </value>
                <value>
                    <fullName>Hypothyroid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mood_fluctuations_irritability_temper__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mood fluctuations, irritability, temper?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>NPI Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <label>NPS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Net Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Patient_Form__c</fullName>
        <formula>HYPERLINK(SUBSTITUTE(
           LEFT($Api.Partner_Server_URL_600,FIND(&quot;/services&quot;, $Api.Partner_Server_URL_600)),
           &apos;salesforce.com/&apos;,
           &apos;site.com/&apos;
)   + &quot;support/s/newpatient?eid=&quot; + Employee__r.Id, &quot;Patient Form&quot;)</formula>
        <label>New Patient Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Status_Total__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Status Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Annual_Lab_Date__c</fullName>
        <formula>Last_Annual_Lab_Date__c  + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Annual Lab Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Annual_Physical__c</fullName>
        <formula>Last_Annual_Physical__c  + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Annual Physical</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Appointment_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Appointment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Appointment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Appointment_Time__c</fullName>
        <label>Next Appointment Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Next_Physical_Consultation_Visit__c</fullName>
        <label>Next Physical Consultation Visit</label>
        <summarizedField>Next_Physical_Consultation__c.Next_Physical_Consultation_Visit__c</summarizedField>
        <summaryForeignKey>Next_Physical_Consultation__c.Account__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Next_Reorder_Date__c</fullName>
        <label>Next Reorder Date</label>
        <summarizedField>Opportunity.Next_Reorder_Date__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Products__c</fullName>
        <label>Num of Products</label>
        <summarizedField>Opportunity.Num_of_Products__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Services__c</fullName>
        <label>Num of Services</label>
        <summarizedField>Opportunity.Num_of_Services__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Lab Received, Physical Exam Completed, Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_GT_Opportunities__c</fullName>
        <label>Number of GT Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Genetic Testing</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Results Delivered to Client</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities__c</fullName>
        <label>Number of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Supplement_Nurture_Emails_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This will let the automation know which email to send out to the patient.</description>
        <label>Number of Supplement Nurture Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Supplement_Opportunities__c</fullName>
        <label>Number of Supplement Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsSupplement__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Won_Opps__c</fullName>
        <description>This field is used to calculate the number on &quot;won&quot; opportunities associated with an Account</description>
        <label>Number of Won Opps</label>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OTP_Preference__c</fullName>
        <description>This field will be used with MWP and to allow the customers to log in with different ways.</description>
        <inlineHelpText>The desired way the customer wants to log into MWP.</inlineHelpText>
        <label>OTP Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>email</fullName>
                    <default>true</default>
                    <label>email</label>
                </value>
                <value>
                    <fullName>sms</fullName>
                </value>
                <value>
                    <fullName>push</fullName>
                </value>
                <value>
                    <fullName>voice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Date_Created__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Old_Last_Activity_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_SF_Account_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Old SF Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_SF_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old SF Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>On Hold Reason</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Hold_Until_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>On Hold Until Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Status_Total__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Status Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities_Type__c</fullName>
        <label>Opportunities Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sexual Wellness</fullName>
                </value>
                <value>
                    <fullName>Medical Consultation</fullName>
                </value>
                <value>
                    <fullName>Medication</fullName>
                </value>
                <value>
                    <fullName>Initial HRT</fullName>
                </value>
                <value>
                    <fullName>Aesthetics</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Labs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunities_amount_in_the_last_year__c</fullName>
        <label>Opportunities amount in the last year</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Is_in_last_one_year__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OptimalWeight__c</fullName>
        <label>Optimal Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Our_approach_is_different_Is_that_ok__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Our approach is different. Is that ok?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Calendly_Link__c</fullName>
        <formula>Owner.Calendly__CalendlyLink__c</formula>
        <label>Owner Calendly Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <formula>Owner.FirstName</formula>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Initials__c</fullName>
        <formula>UPPER(Left( Owner.FirstName ,1)) + 
UPPER(Left(Owner.LastName,1))</formula>
        <label>Owner Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Billing_State_Filter__c</fullName>
        <description>This is used for when we need to filter doctors to patients on the opportunity</description>
        <formula>CASE(
    LOWER(TRIM(ShippingState)),
    &quot;alabama&quot;, &quot;AL&quot;,
    &quot;alaska&quot;, &quot;AK&quot;,
    &quot;arizona&quot;, &quot;AZ&quot;,
    &quot;arkansas&quot;, &quot;AR&quot;,
    &quot;california&quot;, &quot;CA&quot;,
    &quot;colorado&quot;, &quot;CO&quot;,
    &quot;connecticut&quot;, &quot;CT&quot;,
    &quot;delaware&quot;, &quot;DE&quot;,
    &quot;florida&quot;, &quot;FL&quot;,
    &quot;georgia&quot;, &quot;GA&quot;,
    &quot;hawaii&quot;, &quot;HI&quot;,
    &quot;idaho&quot;, &quot;ID&quot;,
    &quot;illinois&quot;, &quot;IL&quot;,
    &quot;indiana&quot;, &quot;IN&quot;,
    &quot;iowa&quot;, &quot;IA&quot;,
    &quot;kansas&quot;, &quot;KS&quot;,
    &quot;kentucky&quot;, &quot;KY&quot;,
    &quot;louisiana&quot;, &quot;LA&quot;,
    &quot;maine&quot;, &quot;ME&quot;,
    &quot;maryland&quot;, &quot;MD&quot;,
    &quot;massachusetts&quot;, &quot;MA&quot;,
    &quot;michigan&quot;, &quot;MI&quot;,
    &quot;minnesota&quot;, &quot;MN&quot;,
    &quot;mississippi&quot;, &quot;MS&quot;,
    &quot;missouri&quot;, &quot;MO&quot;,
    &quot;montana&quot;, &quot;MT&quot;,
    &quot;nebraska&quot;, &quot;NE&quot;,
    &quot;nevada&quot;, &quot;NV&quot;,
    &quot;new hampshire&quot;, &quot;NH&quot;,
    &quot;new jersey&quot;, &quot;NJ&quot;,
    &quot;new mexico&quot;, &quot;NM&quot;,
    &quot;new york&quot;, &quot;NY&quot;,
    &quot;north carolina&quot;, &quot;NC&quot;,
    &quot;north dakota&quot;, &quot;ND&quot;,
    &quot;ohio&quot;, &quot;OH&quot;,
    &quot;oklahoma&quot;, &quot;OK&quot;,
    &quot;oregon&quot;, &quot;OR&quot;,
    &quot;pennsylvania&quot;, &quot;PA&quot;,
    &quot;rhode island&quot;, &quot;RI&quot;,
    &quot;south carolina&quot;, &quot;SC&quot;,
    &quot;south dakota&quot;, &quot;SD&quot;,
    &quot;tennessee&quot;, &quot;TN&quot;,
    &quot;texas&quot;, &quot;TX&quot;,
    &quot;utah&quot;, &quot;UT&quot;,
    &quot;vermont&quot;, &quot;VT&quot;,
    &quot;virginia&quot;, &quot;VA&quot;,
    &quot;washington&quot;, &quot;WA&quot;,
    &quot;west virginia&quot;, &quot;WV&quot;,
    &quot;wisconsin&quot;, &quot;WI&quot;,
    &quot;wyoming&quot;, &quot;WY&quot;,
    &quot;district of columbia&quot;, &quot;DC&quot;,
    &quot;dc&quot;, &quot;DC&quot;,
    ShippingState
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Shipping State - Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Height_cm__c</fullName>
        <formula>Height__c *2.54</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Height (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Portal_Last_Sync__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>When this account has been last synced with the Patient Portal</inlineHelpText>
        <label>Patient Portal Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Patient_Portal_Sync_Message__c</fullName>
        <description>This field is used to store the lastest sync message from the API</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Patient Portal Sync Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patient_Portal_Synced__c</fullName>
        <formula>IF(ISBLANK(Biocanic_External_Id__c), FALSE, TRUE)</formula>
        <label>Patient Portal Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_Weight_kg__c</fullName>
        <formula>Weight__c /2.20462</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Weight (kg)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Account_Mobile_x_Phone__c</fullName>
        <formula>IF(
    PersonMobilePhone = Phone,
    &quot;Match&quot;,
    &quot;Different&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Account Mobile x Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalityType__c</fullName>
        <label>Personality Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analytical</fullName>
                </value>
                <value>
                    <fullName>Amiable</fullName>
                </value>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Expressive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pharm_DS_Opps__c</fullName>
        <label>Pharm DS Opps</label>
        <summaryFilterItems>
            <field>Opportunity.DS_Pharm_Products_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Medication</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Transaction_Source__c</field>
            <operation>equals</operation>
            <value>Direct Sale</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>New, Open, Waiting For Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Practice_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice Group</label>
        <referenceTo>Practice_Group__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PractitionerBio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Bio</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PractitionerDoctorTestOffered__c</fullName>
        <label>Practitioner Test Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Body composition analysis</fullName>
                </value>
                <value>
                    <fullName>Oligoscan</fullName>
                </value>
                <value>
                    <fullName>Carotid Artery Test w/ Panasonic Cardio</fullName>
                </value>
                <value>
                    <fullName>Heart Rate Variability Testing</fullName>
                </value>
                <value>
                    <fullName>Digital Pulse Analyzer</fullName>
                </value>
                <value>
                    <fullName>BIA - Bioimpedance Analysis</fullName>
                </value>
                <value>
                    <fullName>No additional test offered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PractitionerFeePayableTo__c</fullName>
        <label>Practitioner Fee Payable To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HealthGains</fullName>
                </value>
                <value>
                    <fullName>Directly to Doctor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PractitionerFollowupFee__c</fullName>
        <label>Practitioner Follow up Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PractitionerInitialFee__c</fullName>
        <label>Practitioner Initial Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PractitionerPaymentTypes__c</fullName>
        <label>Practitioner Payment Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PractitionerSpecialty__c</fullName>
        <label>Practitioner Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Family Practitioner</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>OB/GYN</fullName>
                </value>
                <value>
                    <fullName>ER</fullName>
                </value>
                <value>
                    <fullName>Surgeon</fullName>
                </value>
                <value>
                    <fullName>Anesthesiologist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practitioner_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Practitioner Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Practitioner_Fee__c</fullName>
        <label>Practitioner Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precision_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This ID field will be used to track the Precision Id from the lab for this particular customer. This will be used when the customer buys supplements that are lab specific.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Precision Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PreferredContactMethod__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Text Message</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Preferred Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book_In_Use__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book In Use</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>AW PB</inlineHelpText>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Goals__c</fullName>
        <label>Primary Goals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>More Energy</fullName>
                </value>
                <value>
                    <fullName>Better Body Composition</fullName>
                </value>
                <value>
                    <fullName>Improved Sexual Performance</fullName>
                </value>
                <value>
                    <fullName>Mental Focus</fullName>
                </value>
                <value>
                    <fullName>Better Sleep</fullName>
                </value>
                <value>
                    <fullName>Faster Recovery Time</fullName>
                </value>
                <value>
                    <fullName>Improve Work Performance</fullName>
                </value>
                <value>
                    <fullName>Improve Quality of Life</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Purchased_Precision_Genetic_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be utilized to indicate that a customer has bought the Tenac Precision genetic test product. This will also be used for internal automation purposes, such as sending an email to the purchaser at the time of the Growth on 2024 conference to confirm their purchase of the product.</description>
        <label>Product Purchased Precision Genetic Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProfessionDetails__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profession Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>